@@ -6,7 +6,7 @@
 
     <groupId>eu.domibus</groupId>
     <artifactId>domibus</artifactId>
-    <version>3.3.4</version>
+    <version>4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Domibus MSH</name>
     <modules>
@@ -23,43 +23,46 @@
         <module>Domibus-MSH-test</module>
     </modules>
     <properties>
-        <cxf.version>3.1.7</cxf.version>
-        <spring.version>4.2.2.RELEASE</spring.version>
-        <spring.security.version>4.2.2.RELEASE</spring.security.version>
-        <activemq.version>5.14.0</activemq.version>
-        <aspectj.version>1.8.9</aspectj.version>
-        <slf4j.version>1.7.21</slf4j.version>
-        <logback.version>1.1.8</logback.version>
+        <cxf.version>3.2.4</cxf.version>
+        <spring.version>4.3.14.RELEASE</spring.version>
+        <spring.security.version>4.2.6.RELEASE</spring.security.version>
+        <activemq.version>5.15.2</activemq.version>
+        <aspectj.version>1.8.13</aspectj.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <logback.version>1.2.3</logback.version>
         <logback.elasticsearch.appender.version>1.6</logback.elasticsearch.appender.version>
-        <httpclient.version>4.5.2</httpclient.version>
+        <httpclient.version>4.5.3</httpclient.version>
         <commons-configuration.version>1.10</commons-configuration.version>
-        <commons-lang.version>2.6</commons-lang.version>
-        <commons-io.version>2.4</commons-io.version>
-        <commons-fileupload.version>1.3.1</commons-fileupload.version>
-        <bouncycastle.version>1.58</bouncycastle.version>
-        <quartz.version>2.2.1</quartz.version>
-        <dozer.version>5.5.1</dozer.version>
-        <jackson.version>2.8.9</jackson.version>
-        <domibus-ext-services-api.version>1.1</domibus-ext-services-api.version>
-        <commons-test.version>4.2</commons-test.version>
-        <commons-collections.version>3.2.2</commons-collections.version>
+        <commons-lang3.version>3.7</commons-lang3.version>
+        <commons-io.version>2.6</commons-io.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
+        <bouncycastle.version>1.58</bouncycastle.version>
+        <quartz.version>2.3.0</quartz.version>
+        <dozer.version>5.5.1</dozer.version>
+        <jackson.version>2.9.5</jackson.version>
+        <commons-test.version>4.2</commons-test.version>
 
         <!-- Sonar properties -->
         <sonar.binaries>target/classes</sonar.binaries>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec</sonar.jacoco.reportPath>
-        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+        <sonar.jacoco.codeCoveragePath>${maven.multiModuleProjectDirectory}/target</sonar.jacoco.codeCoveragePath>
+        <sonar.jacoco.reportPath>${sonar.jacoco.codeCoveragePath}/jacoco-ut.exec</sonar.jacoco.reportPath>
+        <sonar.jacoco.itReportPath>${sonar.jacoco.codeCoveragePath}/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.scm.disabled>true</sonar.scm.disabled>
         <sonar.exclusions>
             **/target/**,
             **/Domibus-MSH-angular/node_modules/**,
             **/swagger*.js,
             **/web.xml,
-            **/common/model/configuration/**
+            **/common/model/configuration/**,
+            **/ebms3/model/configuration/**,
+            **/api/usermessage/domain/**
         </sonar.exclusions>
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
         <sonar.host.url>http://edelquality.westeurope.cloudapp.azure.com:9000/sonar/</sonar.host.url>
         <sonar.ws.timeout>300</sonar.ws.timeout>
+        <jacoco.maven.plugin.version>0.7.7.201606060606</jacoco.maven.plugin.version>
         <!--   Enable the proxy when running sonar from within the EC network -->
         <!--<sonar.web.javaAdditionalOpts>-Dhttp.proxyHost=158.169.9.13 -Dhttp.proxyPort=8012 -Dhttp.proxyUser=theuser -Dhttp.proxyPassword=thepassword -Dhttps.proxyHost=158.169.9.13 -Dhttps.proxyPort=8012 -Dhttps.proxyUser=theuser -Dhttps.proxyPassword=thepassword -Dhttps.nonProxyHosts=localhost -Dhttp.nonProxyHosts=localhost</sonar.web.javaAdditionalOpts>-->
     </properties>
@@ -97,6 +100,7 @@
             <url>https://ec.europa.eu/cefdigital/artifact/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
             </releases>
             <snapshots>
                 <enabled>false</enabled>
@@ -110,6 +114,7 @@
             </releases>
             <snapshots>
                 <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
             </snapshots>
         </repository>
     </repositories>
@@ -349,9 +354,9 @@
                 <version>${commons-io.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-configuration</groupId>
@@ -364,9 +369,9 @@
                 <version>${commons-fileupload.version}</version>
             </dependency>
             <dependency>
-                <groupId>commons-collections</groupId>
-                <artifactId>commons-collections</artifactId>
-                <version>${commons-collections.version}</version>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
@@ -419,7 +424,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.12</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -432,6 +437,12 @@
                 <groupId>eu.europa.ec.digit.commons</groupId>
                 <artifactId>commons-test</artifactId>
                 <version>${commons-test.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.14</version>
                 <scope>test</scope>
             </dependency>
             <!-- End Test dependencies -->
@@ -497,8 +508,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
@@ -538,8 +549,7 @@
                         <execution>
                             <id>default-test</id>
                             <configuration>
-                                <argLine>-server -ea -Duser.language=en -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    ${surefire.argLine}
+                                <argLine>-server -ea -Duser.language=en -Xms512m -Xmx1024m ${surefire.argLine}
                                 </argLine>
                                 <excludes>
                                     <exclude>**/IT*.java</exclude>
@@ -562,9 +572,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -582,9 +590,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -645,15 +651,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.7.201606060606</version>
+                <version>${jacoco.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>pre-unit-test</id>
@@ -714,6 +720,14 @@
             </modules>
         </profile>
         <profile>
+            <id>wildfly12</id>
+            <modules>
+                <module>Domibus-MSH-jms-wildfly-artemis</module>
+                <module>Domibus-MSH-taskexecutor-wildfly</module>
+                <module>Domibus-MSH-wildfly12</module>
+            </modules>
+        </profile>
+        <profile>
             <id>UI</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -757,6 +771,33 @@
             <modules>
                 <module>Domibus-MSH-swagger</module>
             </modules>
+        </profile>
+        <profile>
+            <id>dependency-check</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.owasp</groupId>
+                        <artifactId>dependency-check-maven</artifactId>
+                        <version>3.2.1</version>
+                        <inherited>false</inherited>
+                        <configuration>
+                            <skipProvidedScope>true</skipProvidedScope>
+                            <skipRuntimeScope>true</skipRuntimeScope>
+                            <!-- Disable .Net Assembly Analyzer -->
+                            <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                            <suppressionFile>project-check-exclude.xml</suppressionFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>aggregate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
